General fixes to controls (#344)
* Add support for GeneXus' newline() command

issue: 103790

* Fix for Flex Grid not stretching to parent width

* Fix for Attrs/Vars not stretching to gx-canvas-cell height

* Fix Auto Grow not working on Edit and TextBlock inside a Canvas

* Match vertical and horizontal scrollbar size

--- a/src/components/form-field/form-field.scss
+++ b/src/components/form-field/form-field.scss
@@ -23,7 +23,6 @@ gx-form-field {
   align-self: stretch;
   max-height: 100%;
   flex: 1;
-  height: 100%;
 
   &.gx-label-position {
     // Adjust label position to the opposite cell
